<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.PasswordFragment">

    <TextView
        android:id="@+id/welcome_text"
        style="@style/TextView_Toolbar"
        android:text="@string/create_new_password" />

    <TextView
        android:id="@+id/welcome_desc_text"
        style="@style/TextView_Toolbar_Desc"
        android:text="@string/you_can_create" />

    <EditText
        android:id="@+id/new_password_edit_text"
        style="@style/EditText_Auth_Layout"
        android:background="@drawable/custom_edit_text_back"
        android:layout_below="@id/welcome_desc_text"
        android:layout_marginTop="@dimen/_25sdp"
        android:drawableStart="@drawable/custom_password_icon"
        android:hint="@string/new_password"
        android:importantForAutofill="no"
        android:paddingStart="18dp"
        android:paddingEnd="1dp"
        android:inputType="textPassword|textNoSuggestions" />

    <EditText
        android:id="@+id/repeat_edit_text"
        android:layout_below="@id/new_password_edit_text"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/custom_edit_text_back"
        android:drawableStart="@drawable/custom_password_icon"
        android:hint="@string/repeat_new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword|textNoSuggestions"
        style="@style/EditText_Auth_Layout"
        android:paddingStart="18dp"
        android:paddingEnd="1dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@id/repeat_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/purple_primary"
        app:cornerRadius="12dp" />


</RelativeLayout>