<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.CategoryFragment">

    <TextView
        android:id="@+id/welcome_text"
        style="@style/TextView_Toolbar"
        android:text="@string/select_your_favorite_topics" />

    <TextView
        android:id="@+id/welcome_desc_text"
        style="@style/TextView_Toolbar_Desc"
        android:text="@string/select_some_of_your_favorite" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/welcome_desc_text">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:overScrollMode="never"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"

                tools:listitem="@layout/item_category" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                style="@style/Button_Style_Auth"
                android:layout_below="@id/recycler"
                android:text="@string/next" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>