<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment">

    <TextView
        android:id="@+id/welcome_text"
        style="@style/TextView_Toolbar"
        android:text="@string/browse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_desc_text"
        style="@style/TextView_Toolbar_Desc"
        android:layout_below="@id/welcome_text"
        android:text="@string/discover_things_of_this_world"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_below="@id/welcome_desc_text"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/edit_text_inactive_back"
        app:layout_constraintTop_toBottomOf="@+id/welcome_desc_text" />

    <com.google.android.material.tabs.TabLayout
        android:layout_below="@id/search_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:id="@+id/tab_layout"
        app:tabMode="scrollable"
        app:tabIndicatorHeight="0dp"
        app:tabRippleColor="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_inner_category"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="@dimen/_9sdp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        tools:listitem="@layout/item_inner_catergory" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_180sdp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/news_card_item" />

            <TextView
                android:id="@+id/recommended_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:text="@string/recommended_for_you"
                android:textColor="@color/black_primary"
                android:textSize="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_60sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/small_news_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/news_small_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommended_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>